# WinForge

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  winforge-dev-images.reg  winforge-dev-pdf.reg  winforge-dev.latest.reg  winforge-dev.reg
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  deserializers.rs  jobs.rs  lib.rs  main.rs  menu.rs  services.rs  shared.rs  worker_pool.rs
src-tauri/src/commands/: command_manager.rs
src-tauri/src/deserializers/: command_message_ipc.rs
src-tauri/src/jobs/: job_event.rs
src-tauri/src/menu/: menu.rs  mod.rs  reg_values.rs
src-tauri/src/services/: image_converter.rs  ipc_server.rs  mod.rs  pdf.rs
src-tauri/src/services/pdf/: pdf_converter.rs
src/api/: config.ts  folders.ts
src/components/: folders.component.tsx
src/hooks/: useDiscovery.ts
src/store/: pdfToJpegStore.ts
src/types/: JobEvent.ts
src/types/api/: Pagination.ts
testg/: Cargo.toml
testg/src/: main.rs  main_parallel.rs
winforge-IPC-runner/: .gitignore  Cargo.toml  README.md
winforge-IPC-runner/src/: command_payload_ipc.rs  main.rs
winforge-background-service/: .gitignore  Cargo.toml  README.md
winforge-background-service/src/: ipc_server.rs  main.rs  routes.rs  state.rs  types.rs
winforge-background-service/src/models/: folders.rs
winforge-background-service/src/routes/: folders.rs  health.rs
winforge-background-service/src/types/: cmd_event.rs
