[package]
name = "winforge"
version = "0.1.0"
description = "WinForge Application - Windows Toolkit"
authors = ["JOLY Sylvain"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "winforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["io-util", "net", "rt", "time"] }
crossbeam-channel = "0.5.15"