[package]
name = "winforge-background-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rusqlite = { version = "0.40.1", features = ["bundled"] }
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"