[package]
name = "winforge-background-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rusqlite = { version = "0.40.1", features = ["bundled"] }
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
r2d2_sqlite = "0.35.0"
r2d2 = "0.8.10"
notify = { version = "8.1.0", features = ["serde"] }
sha2 = "0.11.0"
futures = "0.3.32"
axum = "0.8.9"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6.0.0"
